# trilogy

./: .gitignore  README.md  com.rutins.Trilogy.json  meson.build
data/: com.rutins.Trilogy.appdata.xml.in  com.rutins.Trilogy.desktop.in  com.rutins.Trilogy.gschema.xml  meson.build
data/icons/: meson.build
libtlg/: connection.vala  meson.build  reflection.vala  util.vala
libtlg/adapters/: adapter.vala  meson.build  widgets.vala
libtlg/adapters/postgres/: meson.build  pg-adapter.vala
po/: POTFILES  meson.build
src/: add-connection-dialog.blp  add-connection-dialog.ui  add-connection-dialog.vala  addConnectionDialog.blp  addConnectionDialog.js  add_connection_dialog.py  app.css  application.vala  com.rutins.Trilogy.data.gresource.xml  com.rutins.Trilogy.in  com.rutins.Trilogy.src.gresource.xml  connection-preview.blp  connection-preview.ui  connection-preview.vala  connection-settings.blp  connection-settings.ui  connection-view.blp  connection-view.ui  connection-view.vala  connection.js  connectionPreview.blp  connectionPreview.js  connectionView.blp  connectionView.js  connection_preview.py  connection_settings.py  connection_view.py  main.js  main.py  main.vala  meson.build  trilogy.gresource.xml  window.blp  window.js  window.py  window.ui  window.vala
src/data/: connection.vala  meson.build
src/util/: adapter.vala  meson.build  protocol.vala
